--- a/NetBeansProjects/webApp/web/templates/interna.xhtml
+++ b/NetBeansProjects/webApp/web/templates/interna.xhtml
@@ -14,8 +14,8 @@
     </h:head>
     <h:body>
         <header>
-            <h:graphicImage library="imagens" name="Banner2.png" width="100%"
-                            height="180px" /> 
+            <h:graphicImage library="imagens" name="barnnerlog.png" width="100%"
+                            height="100px" /> 
             <h:form>
                 <p:growl id="messages" />
                 <p:toolbar rendered="#{request.isUserInRole('ROLE_ADMINISTRADOR')}">
