--- a/NetBeansProjects/marcacao/web/templates/interna.xhtml
+++ b/NetBeansProjects/marcacao/web/templates/interna.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title><ui:insert name="titulo">Gerenciamento CLTI</ui:insert>
+        <title><ui:insert name="titulo">Agendamento</ui:insert>
         </title>
         <h:outputStylesheet library="css" name="estilo.css" />
          <h:outputStylesheet library="css" name="tabela.css" />
@@ -47,8 +47,8 @@
                     <footer id="footer" 
                             style="text-align:center;
                                    font-style:oblique; 
-                                   padding-top:20px"> Desenvolvido pela Divisão de Sistemas  - CLTI -Bananal 
-                      j.maria@marinha.mil.br 
+                                   padding-top:20px"> José Carlos  - Analista desenvolvedor
+                      jotacfs2010@hotmail.com.
                     </footer>
                 </p:layoutUnit>
             </p:layout>
