--- a/NetBeansProjects/caixa/web/templates/interna.xhtml
+++ b/NetBeansProjects/caixa/web/templates/interna.xhtml
@@ -9,6 +9,7 @@
         </title>
         <h:outputStylesheet library="css" name="estilo.css" />
          <h:outputStylesheet library="css" name="tabela.css" />
+          <h:outputStylesheet library="css" name="default.css" />
          
 
     </h:head>
@@ -16,6 +17,7 @@
         <header>
             <p:graphicImage library="imagens" name="sugestoes_online.png" styleClass="center"/>
             <h:form>
+                
                 <p:growl id="messages" />
                             
                 <form id="condirmacao">
