--- a/NetBeansProjects/caixa/web/resources/css/tabela.css
+++ b/NetBeansProjects/caixa/web/resources/css/tabela.css
@@ -1,5 +1,7 @@
 #divcenter{
-    
+    border: #045491;
+    border-image: 5;
+    opacity: 10;
     width: 400px;
     height: 150px;
     left: 50%;
@@ -11,10 +13,10 @@
 }
 #body{
     
-    background-image: url("#{resource['imagens/cool-background.jpg']}");
-    background-position: top;
+    background-image: url("#{resource['imagens/fuzileiros-navais.jpg']}");
+    background-position:top;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: 100%;
     background-clip: content-box;
     width: 100%;
     height: 100%;
@@ -43,5 +45,10 @@ body, html{
     position:fixed;
     width: 100%;
    
+}
+#fundoPainel{
+     background-image: url("#{resource['imagens/indice.jpg']}");
+     background-position: center;
+     opacity: 10px;
 }
 
