--- a/NetBeansProjects/caixa/web/templates/interna.xhtml
+++ b/NetBeansProjects/caixa/web/templates/interna.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title><ui:insert name="titulo">Gerenciamento CLTI</ui:insert>
+        <title><ui:insert name="titulo">Caixa de sugestões</ui:insert>
         </title>
         <h:outputStylesheet library="css" name="estilo.css" />
          <h:outputStylesheet library="css" name="tabela.css" />
